--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,10 @@
 [flake8]
 max-line-length = 79
 max-complexity = 10
+extend-ignore = E203
+exclude =
+    .git,
+    __pycache__,
+    venv,
+    .github,
+    .pytests_cache
