--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -6,18 +6,18 @@ on:
     branches:
       - '**'
 jobs:
-  run_tests:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v1
-        with:
-          python-version: '3.9'
-          architecture: 'x64'
-      - name: Install requirements
-        run: pip install -r requirements.txt
-      - name: Run tests
-        run: pytest
+#  run_tests:
+#    runs-on: [ubuntu-latest]
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-python@v1
+#        with:
+#          python-version: '3.9'
+#          architecture: 'x64'
+#      - name: Install requirements
+#        run: pip install -r requirements.txt
+#      - name: Run tests
+#        run: pytest
   run_flake8:
     runs-on: [ubuntu-latest]
     steps:
@@ -29,4 +29,4 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run Flake8
-        run: flake8 ./ tests
+        run: flake8 ./
