--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-# local package
--e .
-
-# external requirements
 click
 Sphinx
 coverage
 awscli
-flake8
 python-dotenv>=0.5.1
 pre-commit==2.20.0
 black==22.10.0
 flake8==6.0.0
+torch==1.13.0
